template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Jenkins AWS CloudFormation Stack
Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: The target Vpc Id
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: The target subnet Id
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: THe keypair that allows SSH access 
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-07eb698ce660402d2
      InstanceType: t2.micro
      SubnetId: !Ref SubnetId
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref EC2InstanceSecurityGroup
      IamInstanceProfile: !Ref EC2InstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo 'ECS_CLUSTER=${EcsCluster}' >> /etc/ecs/ecs.config
          groupadd -g 1000 jenkins
          useradd -u 1000 -g jenkins jenkins
          mkdir -p /ecs/jenkins_home
          chown -R jenkins:jenkins /ecs/jenkins_home
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref AWS::StackName
              - -instance
  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join
        - ''
        - - !Ref AWS::StackName
          - ' ingress security group'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ElbSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref AWS::StackName
              - -ec2-sg
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EC2InstanceRole
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: 
              Service: 
                - ec2.amazonaws.com
            Action: 
              - sts:AssumeRole
      Policies:
        - PolicyName: "updateStack"
          PolicyDocument: 
            Version: "2012-10-17"
            Statement: 
              - Effect: "Allow"
                Action: "cloudformation:UpdateStack"
                Resource: arn:aws:cloudformation:us-east-1:224947627700:stack/todobackend/*
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
        - arn:aws:iam::aws:policy/AWSCloudFormationReadOnlyAccess
  ElbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join
      - ''
      - - !Ref AWS::StackName
        - ' ELB ingress security group'    
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Join
          - ''
          - - !Ref AWS::StackName
            - -elb-sg
  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      CrossZone: false
      SecurityGroups:
        - !Ref ElbSecurityGroup
      Listeners:
        - LoadBalancerPort: 80
          InstancePort: 8080
          Protocol: http
      Instances:
        - !Ref EC2Instance
      Subnets:
        - !Ref SubnetId
  EcsCluster:
    Type: AWS::ECS::Cluster
  EcsTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Name: jenkins
          Image: phullr2/todobackend-jenkins
          Memory: 950
          PortMappings:
            - ContainerPort: 8080
              HostPort: 8080
          MountPoints:
            - SourceVolume: docker
              ContainerPath: /var/run/docker.sock
            - SourceVolume: jenkins_home
              ContainerPath: /var/jenkins_home
      Volumes:
        - Name: jenkins_home
          Host:
            SourcePath: /ecs/jenkins_home
        - Name: docker
          Host:
            SourcePath: /var/run/docker.sock
  EcsService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref EcsCluster
      TaskDefinition: !Ref EcsTaskDefinition
      DesiredCount: 1
Outputs: 
  ElbDomainName:    
    Description: Public DNS of the Elastic Load Balancer
    Value: !GetAtt ElasticLoadBalancer.DNSName
  EC2InstanceDomainName:
    Description: Public DNS of the EC2 Instance
    Value: !GetAtt EC2Instance.PublicDnsName
